pictor (2.25) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 13 Aug 2013 09:04:12 -0500

pictor (2.24-0ubuntu1) saucy; urgency=low

  * debian/control, debian/pictor-unload.install, debian/pictor-
    unload.manpages, pictor-rename, pictor-rename.1, pictor-unload:
    - depend on fdupes, to remove duplicate files
    - depend on libimage-exiftool-perl for exiftool
    - add a new tool, pictor-rename, and its manpage
      + rename pictures with a prepended timestamp, YYYY-MM-DD_HH-MM-SS__*
      + use dashes instead of colons in time for compatibility with
        Mac OS X and Windows
    - drastically simplify pictor-unload
      + move naming logic to pictor-rename
      + use fdupes to sensibly remove duplicate images
      + drop card unmounting logic
  * debian/control, pictor-rename:
    - bump standards

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 13 Aug 2013 09:04:09 -0500

pictor (2.23-0ubuntu1) raring; urgency=low

  * index.php:
    - center footer table
    - update copyright to 2013
    - move descriptions to titles
    - support listing albums and thumbnails in the same directory

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 Mar 2013 23:59:12 -0500

pictor (2.22-0ubuntu1) raring; urgency=low

  * index.php:
    - auto resize image to the size of browser window, using javascript

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 05 Jan 2013 11:09:34 -0600

pictor (2.21-0ubuntu1) raring; urgency=low

  * debian/control:
    - fix lintian warnings

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Oct 2012 17:30:10 +0100

pictor (2.20-0ubuntu1) raring; urgency=low

  * index.php:
    - ensure error message is visible

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 31 Oct 2012 17:14:48 +0100

pictor (2.19-0ubuntu1) precise; urgency=low

  * index.php:
    - fix some whitespace
    - deprecate $EDIT editing descriptions
      + this never worked terribly well, and required www-data have